fixed even more spacing and positioning issues on resize

--- a/css/hero.css
+++ b/css/hero.css
@@ -62,15 +62,12 @@ body, h1, h2, h3, h4, h5, h6 {
 .c_hero_image {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 45%;
     -webkit-transform: translateZ(-300px) scale(.7) translateX(-50%);
     transform: translateZ(-300px) scale(.7) translateX(calc(-50% / .7));
     max-width: 90%;
 }
 
-#p-about .c_hero_image {
-    max-width: 380px;
-}
 
 @media screen and (min-width: 650px) {
     .c_hero_headline h1 {
@@ -78,10 +75,12 @@ body, h1, h2, h3, h4, h5, h6 {
     }
 }
 
-@media screen and (min-width: 400px) and (orientation: portrait) {
-    #p-about .c_hero_image {
-        max-width: 110%;
+@media screen and (min-width: 400px) {
+
+    .c_hero_headline h1 {
+        font-size: 4.5em;
     }
+
 }
 
 @media screen and (min-width: 550px) and (orientation: landscape) {
@@ -89,17 +88,6 @@ body, h1, h2, h3, h4, h5, h6 {
         top: 50%;
     }
 
-    .c_hero_image {
-        top: 5%;
-    }
-
-    .c_hero_image {
-        max-width: 90%;
-    }
-
-    #p-about .c_hero_image {
-        max-width: 90%;
-    }
 }
 
 
@@ -110,51 +98,47 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (min-width: 700px) and (orientation: portrait) {
-    #p-about .c_hero_image {
-       top: 40%
-    }
+
 }
 
 @media screen and (min-width: 900px) {
-    .c_hero_headline h1 {
-        font-size: 6em;
-    }
-}
-
-@media screen and (min-width: 1000px) {
     .c_hero_headline h1 {
         font-size: 7em;
     }
 }
 
-@media screen and (min-width: 898px) and (orientation: landscape) {
+@media screen and (min-width: 1000px) {
+    .c_hero_headline h1 {
+        font-size: 9em;
+    }
+}
+
+@media screen and (min-width: 1000px) and (orientation: landscape) {
     .c_hero_headline {
         top: 50%;
     }
 
     .c_hero_image {
         top: 15%;
+        max-width: 70%;
     }
 
-    #p-about .c_hero_image {
-        top: 15%;
-    }
 }
+
+
 
 @media screen and (min-width: 1200px) and (orientation: landscape) {
     .c_hero_headline h1{
         font-size: 8em;
     }
 
-    .c_hero_image {
-        max-width: 90%;
-    }
 }
 
 @media screen and (min-width: 1800px) and (orientation: landscape) {
     .c_hero_headline h1{
         font-size: 9em;
     }
+
 }
 /*IMAGES*/
 
@@ -162,7 +146,7 @@ body, h1, h2, h3, h4, h5, h6 {
 /*COLORS*/
 
 #p-home #group1 .parallax__layer--back {
-    background: #1976d2;
+    background: #1336FE;
 }
 
 #p-work #group1 .parallax__layer--back {
